--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -38,6 +38,6 @@ reporting_status: complete
 Dieser Indikator zeigt die Anteile der Siedlungs- und Verkehrsfläche sowie der Vegetationsfläche an der Gesamtfläche sowie die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen sowie der Vegetationsflächen im Vergleich zum Vorjahrin in Prozent an. Der restliche Flächenanteil teil sich auf die Bereiche Abbauland und Gewässer auf, die mit einem nur geringen Flächenanteil hier vernachlässigbar sind.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote<br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
 <br>
 <b>BNK-Indikator</b>
