--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (INKB).  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.5: Mehr Selbstversorgung und Urban Gardening fördern<br>
+N1.4: Unterstützung der Vermarktungsstrukturen regionaler, fairer und ökologischer Produkte und somit des regionalen Konsums<br>
 <br>
 <b>BNK-Indikator</b>
