--- a/meta/16-5.md
+++ b/meta/16-5.md
@@ -33,6 +33,8 @@ reporting_status: complete
 ---
 2020 und 2021 kam es zu deutlichen Einbrüche bei der Gewerbesteuer aufgrund der COVID-19-Pandemie. In den darauf folgenden Jahren konnte wieder mehr Gewerbesteuer eingenommen werden.<br>
 <br>
-Die Steuereinnahmen beziehen sich nur auf die Gewerbesteuer. Hierbei werden jedoch auch Grundsteuer-, Einkommenssteuer-, Umsatzsteuer- und Hundesteuereinnahmen mit eingerechnet.
+Die Steuereinnahmen beziehen sich nur auf die Gewerbesteuer. Hierbei werden jedoch auch Grundsteuer-, Einkommenssteuer-, Umsatzsteuer- und Hundesteuereinnahmen mit eingerechnet.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingostadt</b><br>
 <br>
 <b>BNK-Indikator</b>
