--- a/meta/16-5.md
+++ b/meta/16-5.md
@@ -36,5 +36,6 @@ reporting_status: complete
 Die Steuereinnahmen beziehen sich nur auf die Gewerbesteuer. Hierbei werden jedoch auch Grundsteuer-, Einkommenssteuer-, Umsatzsteuer- und Hundesteuereinnahmen mit eingerechnet.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingostadt</b><br>
+I3.1: Sicherstellung eines zukunftsfähigen Haushalts<br> 
 <br>
 <b>BNK-Indikator</b>
