--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -39,7 +39,7 @@ Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsar
 <br>
 Die Volkshochschule Ingolstadt (VHS) kooperiert seit mehreren Jahren mit migrantischen Organisationen im Rahmen mehrerer Projekte im Jahr. Darüber hinaus sind eine Vielzahl von Kursleiterinnen und Kursleitern in der Volkshochschule tätig, die einen Migrationshintergrund bzw. ausländische Wurzeln vorweisen können. Das umfassende Programm für alle Bürgerinnen und Bürger wird durch die Vielfalt der Dozierenden erst ermöglicht.<br>
 <br>
-Darüber arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.
+Darüber arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V2.2: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
