--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -24,7 +24,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Projekte mit migrantischen Organisationen und Personen in den Einrichtungen der Stadt Ingolstadt
 
-SOURCE_TYPE: Integrationsbeauftragte Stadt Ingolstadt  # data source  
+SOURCE_TYPE: Integrationsbeauftragte Stadt Ingolstadt, Volkshochschule Ingolstadt, Stadtbücherei Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
