--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -37,7 +37,7 @@ reporting_status: complete
 ---
 Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte Stadt Ingolstadt</a>. <br>
 <br>
-Die Volkshochschule Ingolstadt (VHS) kooperiert seit mehreren Jahren mit migrantischen Organisationen im Rahmen mehrerer Projekte im Jahr. Darüber hinaus sind eine Vielzahl von Kursleiterinnen und Kursleitern in der Volkshochschule tätig, die einen Migrationshintergrund bzw. ausländische Wurzeln vorweisen können. Das umfassende Programm für alle Bürgerinnen und Bürger wird durch die Vielfalt der Dozierenden erst ermöglicht.<br>
+Die Volkshochschule Ingolstadt (VHS) kooperiert seit mehreren Jahren mit migrantischen Organisationen im Rahmen mehrerer Projekte im Jahr. Darüber hinaus sind eine Vielzahl von Kursleiterinnen und Kursleitern in der Volkshochschule tätig, die einen Migrationshintergrund bzw. ausländische Wurzeln vorweisen können. Eine genaue Auflistung der Projekte ist im Nachgang nicht zu ermitteln, daher sind hier nur die Kooperationen der VHS mit migrantischen Organisationen abgebildet. Das umfassende Programm für alle Bürgerinnen und Bürger wird durch die Vielfalt der Dozierenden erst ermöglicht.<br>
 <br>
 Darüber arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.<br>
 <br>
