--- a/meta/16-7.md
+++ b/meta/16-7.md
@@ -31,6 +31,8 @@ reporting_status: complete
 ---
 Der Indikator zeigt den Anteil der Wähler/-innen an Wahlberechtigten einer Kommune, die zur Wahl gehen.<br>
 <br>
+Mehr Infos zu Wahlen in Ingolstadt auf <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/">Wahlen Ingolstadt</a>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.4: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
 <br>
