--- a/meta/16-7.md
+++ b/meta/16-7.md
@@ -18,8 +18,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anteil der Wähler/-innen an Wahlberechtigten einer Kommune, die zur Wahl gehen
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
-source_earliest_available_1: 2020
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/output/download.php?fid=3052.3631.1.PDF">Ergebnisse Kommunalwahlen seit 1978</a>,   # data source  
+source_earliest_available_1: 2002
 source_periodicity_1: Jährlich
 
 language: de   
@@ -31,7 +31,7 @@ reporting_status: complete
 ---
 Der Indikator zeigt den Anteil der Wähler/-innen an Wahlberechtigten einer Kommune, die zur Wahl gehen.<br>
 <br>
-Mehr Infos zu Wahlen in Ingolstadt auf <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/">Wahlen Ingolstadt</a>
+Mehr Infos zu Wahlen in Ingolstadt auf <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/">Wahlen Ingolstadt</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.4: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
