--- a/meta/16-7.md
+++ b/meta/16-7.md
@@ -15,12 +15,16 @@ data_start_values:  # initialize the field to be shown
    value: Kommunalwahl
  - field: Wahl 
    value: Landtagswahl
+ - field: Wahl 
+   value: Bundestagswahl
+ - field: Wahl 
+   value: Europawahl
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anteil der Wähler/-innen an Wahlberechtigten einer Kommune, die zur Wahl gehen
 
-SOURCE_TYPE: <a href="https://www.ingolstadt.de/output/download.php?fid=3052.3631.1.PDF">Ergebnisse Kommunalwahlen seit 1978</a>, <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/Landtags-Bezirkswahlen/">Ergebnisse Landtagswahlen</a>   # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/output/download.php?fid=3052.3631.1.PDF">Ergebnisse Kommunalwahlen seit 1978</a>, <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/Landtags-Bezirkswahlen/">Ergebnisse Landtagswahlen</a>, <a href="https://www.ingolstadt.de/output/download.php?fid=3052.6201.1.PDF">Ergebnisse Bundestagswahl</a>, <a href="https://www.ingolstadt.de/Rathaus/Politik/Wahlen/Europawahl/">Ergebnisse Europawahl</a>   # data source  
 source_earliest_available_1: 2002
 source_periodicity_1: Jährlich
 
