--- a/meta/3-11.md
+++ b/meta/3-11.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikatator gibt den Durchimpfungsgrad  der Kinder in Ingolstadt vor der Einschulung an unterschieden nach Herkunft (mit / ohne Migrationshintergrund).<br>
+Der Indikator gibt den Durchimpfungsgrad  der Kinder in Ingolstadt vor der Einschulung an unterschieden nach Herkunft (mit / ohne Migrationshintergrund).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventionsangeboten<br>
