--- a/meta/3-12.md
+++ b/meta/3-12.md
@@ -35,7 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikatator gibt den Anteil der Kinder in Ingolstadt vor der Einschulung nach Geschlecht und Herkunft (mit / ohne Migrationshintergrund) an, bei denen die Vorsorgeuntersuchungen U1 - U9 vollständig abgeschlossen wurden.<br>
+Der Indikator gibt den Anteil der Kinder in Ingolstadt vor der Einschulung nach Geschlecht und Herkunft (mit / ohne Migrationshintergrund) an, bei denen die Vorsorgeuntersuchungen U1 - U9 vollständig abgeschlossen wurden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.5: Ermöglichung einer guten Versorgung (generationenspezifische Angebote)<br>
