--- a/meta/3-13.md
+++ b/meta/3-13.md
@@ -35,7 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikatator gibt den Anteil der Kinder in Ingolstadt vor der Einschulung nach Geschlecht und Herkunft (mit / ohne Migrationshintergrund) an, mit Adipostias.<br>
+Der Indikator gibt den Anteil der Kinder in Ingolstadt vor der Einschulung nach Geschlecht und Herkunft (mit / ohne Migrationshintergrund) an, mit Adipostias.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventionsangeboten<br>
