--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -55,7 +55,7 @@ Katholische Kindertageseinrichtungen Ingolstadt gemeinnützige GmbH: Kita St. Ru
 <br>
 Im Jahr 2023 wurden insgesamt 12 weitere Krippenplätze und 70 Kindergartenplätze geschaffen.<br>  
 <br>
-Gesamtanzahl Kitaplätze, Stand Dezember 2023<br> 
+<b>Gesamtanzahl Kitaplätze, Stand Dezember 2023</b><br> 
 Regelförderung 0-3 Jahre: 1256 Kinder<br> 
 Regelförderung 3-6 Jahre: 4211 Kinder<br> 
 <br>
