--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -9,28 +9,36 @@ indicator_sort_order: 09-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units:
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
  - field: Region 
-   value: Bayern 
+   value: Bayern
+ - field: Region
+   value: Bund
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: 5G-Mobilfunkausbau in Prozent
 
 SOURCE_TYPE:  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2021
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Dieser Indikator zeigt den Ausbau des 5G-Netzes in Ingolstadt an.<br>
+<br>
+Im Jahresverlauf 2023 zeigt die Entwicklung des 5G-Mobilfunkausbaus sowohl auf Bundes-, Landes- und Kreisebene eine deutliche Intensivierung. Begründet ist dies vor allem durch die Gigabitstrategie der Bundesregierung.
+Die im Stadtgebiet Ingolstadt mit 5G versorgte Fläche stieg im Jahresverlauf 2023 deutlich und knüpft damit an den Vorjahrestrend an. Die Abdeckung mit 5G umfasst dabei in dieser Darstellung alle „technologischen
+Ausprägungen“5 der 5G-Technologie. In dieser Zahl ist ein nicht näher spezifizierter Anteil an 5G SA Technologie enthalten, die mit zahlreichen Vorteilen für den Endverbraucher verbunden wird, u.a. Reduktion des Stromverbrauchs, größerer Nutzerkreis, Echtzeit-Datentransfer.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.2: Digitale Infrastruktur<br>
 <br>
