--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -9,30 +9,32 @@ indicator_sort_order: 09-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: 
+computation_units: Anzahl Gründungen
 data_start_values:  # initialize the field to be shown  
- - field: Einrichtung 
-   value: brigk 
- - field: Einrichtung 
-   value: EGZ
- - field: Einrichtung 
-   value: EGZ mit Fokus Nachhaltigkeit / Neues Geschäftsmodell
+ - field: Gründungssaldo 
+   value: Anmeldungen 
+ - field: Gründungssaldo 
+   value: Abmeldungen
+ - field: Gründungssaldo
+   value: Saldo
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Gründungssaldo in Ingolstadt nach Anzahl Gewerbean- und abmeldungen
 
-SOURCE_TYPE:  # data source  
-source_earliest_available_1:
-source_periodicity_1:
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=52311-905z&bypass=true&levelindex=1&levelid=1727101171691#abreadcrumb">Bayerisches Landesamt für Statistik</a> # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Dieser Indikator zeigt das Gründungssaldo in Ingolstadt nach Anzahl Gewerbean- und abmeldungen an.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.1: Existenzgründungen<br>
 <br>
