--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: 
+computation_units: Anzahl teilnehmender Betriebe am Wohnortcluster
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,17 +18,22 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions:
+computation_definitions: Anzahl teilnehmender Betriebe am Wohnortcluster
 
-SOURCE_TYPE:    # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Wirtschaftsreferat der Stadt Ingolstadt   # data source  
+source_earliest_available_1: 2022
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-
+Durch das Projekt Wohnortcluster entsteht für Ingolstadt und die Region eine realdaten-basierte Mobilitätsdatenbank. Ziel des Projekts ist es, durch die Erfassung der tatsächlichen Mobilitätsströme eine Optimierung der Pendlermobilität zu fördern.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W1.2: Qualitative Entwicklung von Gewerbeflächen<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
