--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units:
+computation_units: Cityfreiraumförderungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,12 +18,12 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Häufigkeit der Inanspruchnahme der Cityfreiraumförderung
 
-SOURCE_TYPE: # data source
+SOURCE_TYPE: IFG Ingolstadt # data source
 
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -32,6 +32,8 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Mit der Initiative „Cityfreiraum“ verfolgen IFG, IN-City und Existenzgründerzentrum das Ziel, innerstädtische Leerstände mit individuellen Gründern aus den Bereichen Handel, Handwerk und Dienstleistung zu füllen. Damit soll eine höhere Angebotsvielfalt für Altstadtbesucher erzielt und Neugründungen gefördert werden. Die Förderung umfasst einen 12-monatigen Mietzuschuss i.H.v. 30% der Nettokaltmiete (max. 12.000 EUR), professionelle Beratung bei der Businessplanerstellung, einen einmaligen Werbekostenzuschuss i.H.v. 500,- EUR sowie eine kostenlose 1-jährige Mitgliedschaft bei IN-City e.V. (Quelle: <a href="https://www.ingolstadt-ifg.de/cityfreiraum">IFG Ingolstadt</a>).<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.1: Existenzgründungen<br>
 <br>
