--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl teilnehmender Betriebe am Wohnortcluster
 
-SOURCE_TYPE: Wirtschaftsreferat der Stadt Ingolstadt   # data source  
+SOURCE_TYPE: IFG Ingolstadt   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: jährlich
 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Durch das Projekt Wohnortcluster entsteht für Ingolstadt und die Region eine realdaten-basierte Mobilitätsdatenbank. Ziel des Projekts ist es, durch die Erfassung der tatsächlichen Mobilitätsströme eine Optimierung der Pendlermobilität zu fördern.<br>
+Durch das Projekt Wohnortcluster entsteht für Ingolstadt und die Region eine realdaten-basierte Mobilitätsdatenbank. Ziel des Projekts ist es, durch die Erfassung der tatsächlichen Mobilitätsströme eine Optimierung der Pendlermobilität zu fördern (Quelle: <a href="https://www.ingolstadt-ifg.de/wohnortcluster">IFG Ingolstadt</a>).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W1.2: Qualitative Entwicklung von Gewerbeflächen<br>
