--- a/meta/9-5.md
+++ b/meta/9-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: 
+computation_units: Datensätze
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,20 +18,21 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl öffentlich zugänglicher Datensätze
 
-SOURCE_TYPE:  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Service/Weitere-Themen/Open-Data/">Open Data Portal der Stadt Ingolstadt</a> # data source  
+source_earliest_available_1: 2023
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-
+Dieser Indikator zeigt alle öffentlich zugänglichen Datzensätze an. Alle angegebenen öffentlich zugänglichen Datensätze sind von der Stadt Ingolstadt auf dem <a href="https://www.ingolstadt.de/Service/Weitere-Themen/Open-Data/">städtischen Open Data Portal</a> auffindbar.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.2: Digitale Infrastruktur<br>
 <br>
