--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -27,7 +27,7 @@ source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
