--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -9,19 +9,23 @@ indicator_sort_order: 03-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 E) 
+computation_units: Allg.-Mediziner/-innen je 100.000 E
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
  - field: Region 
-   value: Bayern 
+   value: Landkreis Eichstätt
+ - field: Region 
+   value: Landkreis-Neuburg Schrobenhausen 
+ - field: Region 
+   value: Landkreis Pfaffenhofen a. d. Ilm
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Versorgung durch Allgemeinmediziner/-innen je 100.000 EW
 
-SOURCE_TYPE: <a href="https://www.kvb.de/index.php">Kassenärztliche Vereinigung Bayerns</a>  # data source  
-source_earliest_available_1: 2021
+SOURCE_TYPE: <a href="https://www.lgl.bayern.de/gesundheit/gesundheitsberichterstattung/gesundheitsatlas/ia_report/atlas.html">Gesundheitsatlas Bayern</a> # data source  
+source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
 language: de   
@@ -31,7 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Hausärztinnen und Hausärzte, die an der kassenärztlichen Versorgung teilnehmen (ambulant) je 100.000 Einwohner/-innen. <br>
+Der Indikator gibt die ambulante Versorgung mit Hausärzt/-innen, die an der kassenärztlichen Versorgung teilnehmen, in Form der Versorgungsdichte auf regionaler Ebene wieder. Hausärzt/-innen gehören zu den wohnortnah benötigten Arztgruppen, daher sind regionale Unterschiede in der ambulanten Versorgungsinfrastruktur von besonderem Interesse.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
