--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -21,7 +21,7 @@ data_start_values:  # initialize the field to be shown
    value: Landkreis Pfaffenhofen a. d. Ilm
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolstadt 
+national_geographical_coverage: Ingolstadt, Landkreis Eichstätt, Landkreis-Neuburg Schrobenhausen, Landkreis Pfaffenhofen a. d. Ilm     
 computation_definitions: Versorgung durch Allgemeinmediziner/-innen je 100.000 EW
 
 SOURCE_TYPE: <a href="https://www.lgl.bayern.de/gesundheit/gesundheitsberichterstattung/gesundheitsatlas/ia_report/atlas.html">Gesundheitsatlas Bayern</a> # data source  
