--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -17,6 +17,8 @@ data_start_values:  # initialize the field to be shown
    value: VHS
  - field: Einrichtung 
    value: Stadtbücherei
+ - field: Einrichtung
+   value: Kulturamt
  - field: Einrichtung 
    value: gesamt
 
@@ -24,7 +26,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Projekte mit migrantischen Organisationen und Personen in den Einrichtungen der Stadt Ingolstadt
 
-SOURCE_TYPE: Integrationsbeauftragte Stadt Ingolstadt, Volkshochschule Ingolstadt, Stadtbücherei Ingolstadt  # data source  
+SOURCE_TYPE: Integrationsbeauftragte Stadt Ingolstadt, Volkshochschule Ingolstadt, Stadtbücherei Ingolstadt, Kulturamt der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -35,11 +37,17 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte Stadt Ingolstadt</a>. <br>
+Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte Stadt Ingolstadt</a>.<br>
 <br>
 Die Volkshochschule Ingolstadt (VHS) kooperiert seit mehreren Jahren mit migrantischen Organisationen im Rahmen mehrerer Projekte im Jahr. Darüber hinaus sind eine Vielzahl von Kursleiterinnen und Kursleitern in der Volkshochschule tätig, die einen Migrationshintergrund bzw. ausländische Wurzeln vorweisen können. Eine genaue Auflistung der Projekte ist im Nachgang nicht zu ermitteln, daher sind hier nur die Kooperationen der VHS mit migrantischen Organisationen abgebildet. Das umfassende Programm für alle Bürgerinnen und Bürger wird durch die Vielfalt der Dozierenden erst ermöglicht.<br>
 <br>
 Darüber arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.<br>
+<br>
+Das Kulturamt der Stadt Ingolstadt arbeitet im Rahmen des Fest der Kulturen mit den in Ingolstadt gemeldeten ausländischen Kulturvereinen zusammen, die von Personen mit migrantischem Hintergrund betrieben, betreut und getragen werden.<br>
+<br>
+Gleiches gilt für das Afrikafest – hier ist der Partner der Afrikaverein, sowie Gastronomen, die afrikanisches Essen anbieten.<br>
+<br>
+Die Urbankultur engagiert für Ihre Veranstaltungen teilweise auch Menschen mit Migrationshintergrund, aber nicht alle befassen sich mit dem Thema Migration bzw. die Veranstaltungen haben dies nicht zum Ziel. Daher werden diese Projekte hier nicht aufgeführt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V2.2: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
