--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -9,16 +9,18 @@ indicator_sort_order: 01-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
+computation_units: Anzahl Empfänger/-innen SGB XII
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: SGB XII 
+   value: Hilfe zum Lebensunterhalt
+ - field: SGB XII 
+   value: Grundsicherung
+ - field: SGB XII 
+   value: Erwerbsminderungsrenten
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung (SGB XII)
+computation_definitions: Empfänger/-innen von SGB XII (Hilfe zum Lebensunterhalt, Grundsicherung, Erwerbsminderungsrenten)
 
 SOURCE_TYPE:  "Amt für Soziales der Stadt Ingolstadt"  # data source
 source_earliest_available_1: 2019
@@ -26,7 +28,7 @@ source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
