--- a/meta/10-9.md
+++ b/meta/10-9.md
@@ -7,31 +7,56 @@ indicator_sort_order: 10-09-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl der Gewalttaten 
 data_start_values:  # initialize the field to be shown  
- - field: Schulart 
-   value: Grundschule 
- - field: Schulart
-   value: Mittelschule 
-
+ - field: Region
+   value: Ingolstadt 
+ - field: Region
+   value: Ingolstadt 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Gewalttaten in Einrichtungen für Menschen mit Behinderungen
 
 SOURCE_TYPE:  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Alle städtischen Einrichtungen für Menschen mit Behinderung (neu: Einrichtungen der Eingliederungshilfe) verfügen über einen hauseigenen Standard zur Gewaltprävention oder ein gesondertes Gewaltschutzkonzept, handlungsleitend für alle Mitarbeitenden.<br>
+<br>
+Seit Juli 2023 sind die Einrichtungen, nach den gesetzlichen Vorgaben des bay. Pflege- und Wohnqualitätsgesetztes verpflichtet, besondere Ereignisse (Gewalttaten) an die FQA (Qualitätsentwicklung und Aufsicht, ehemals Heimaufsicht) zu melden. Diesbezügliche Meldungen gingen bei der FQA seitdem nicht ein. Im Rahmen der jährlichen und anlassbezogenen Audits, die in den Einrichtungen stattfanden, wurden keine Hinweise auf Gewalttaten festgestellt. Aus den vorhergehenden Jahren (2019-2022) liegen keine Angaben/Meldungen/Hinweise zu Gewalttaten vor.<br>
+<br>
+Auszug aus dem bay. PfleWoqG:<br>
+Die stationären Einrichtungen und besonderen Wohnformen der Eingliederungshilfe haben der zuständigen Behörde besondere Ereignisse und die daraus eingeleiteten Maßnahmen unverzüglich anzuzeigen. 2Besondere Ereignisse im Sinn von Satz 1 liegen vor, wenn<br>
+1.<br>
+von tätigkeitsbezogenen Strafverfahren gegen Beschäftigte oder Dritte Kenntnis erlangt wurde,<br>
+<br>
+2.<br>
+der unnatürliche Tod einer Bewohnerin oder eines Bewohners festgestellt wurde,<br>
+<br>
+3.<br>
+der Verdacht von physischer oder sexualisierter Gewalt gegen Bewohnerinnen und Bewohner besteht,<br>
+<br>
+4.<br>
+eine erhebliche Beeinträchtigung für Bewohnerinnen und Bewohner oder des ordnungsgemäßen Betriebs der stationären Einrichtung oder besonderen Wohnform der Eingliederungshilfe zu befürchten oder eingetreten ist,<br>
+<br>
+5.<br>
+die personellen Mindestanforderungen dauerhaft erheblich unterschritten werden oder<br>
+<br>
+6.<br>
+ein Hausverbot nach Art. 5 erteilt wurde.<br>
+<br>
+Ein Strafverfahren ist tätigkeitsbezogen, wenn die zur Last gelegte Straftat im Zusammenhang mit der Tätigkeit der Versorgung pflege- oder betreuungsbedürftiger Menschen oder Menschen mit Behinderung begangen wurde.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.2: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
 <br>
