--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -11,14 +11,16 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Empfänger/-innen von Erwerbsminderungsrente 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Geschlecht 
+   value: männlich
+ - field: Geschlecht 
+   value: weiblich
+ - field: Geschlecht 
+   value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: Empfänger/-innen von Erwerbsminderungsrente
+computation_definitions: Empfänger/-innen von Erwerbsminderungsrente nach SGB XII
 
 SOURCE_TYPE: "Amt für Soziales der Stadt Ingolstadt"  # data source  
 source_earliest_available_1: 2019
@@ -26,7 +28,7 @@ source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
