--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -15,12 +15,10 @@ data_start_values:  # initialize the field to be shown
    value: Hilfe zum Lebensunterhalt
  - field: SGB XII 
    value: Grundsicherung
- - field: SGB XII 
-   value: Erwerbsminderungsrenten
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Empfänger/-innen von SGB XII (Hilfe zum Lebensunterhalt, Grundsicherung, Erwerbsminderungsrenten)
+computation_definitions: Empfänger/-innen von SGB XII (Hilfe zum Lebensunterhalt, Grundsicherung)
 
 SOURCE_TYPE:  "Amt für Soziales der Stadt Ingolstadt"  # data source
 source_earliest_available_1: 2019
