--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -24,6 +24,7 @@
 3-11-title: Durchimpfungsgrad
 3-12-title: Inanspruchname der Früherkennungsmaßnahmen
 3-13-title: Adipositas
+3-14-title: Ambulante Versorgungssituation
 
 4-1-title: Studierendenanzahl und Anteil ausländischer Studierender
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
