--- a/meta/3-14.md
+++ b/meta/3-14.md
@@ -36,7 +36,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Hausärztlicher und allgemeiner fachärztlicher Versorgungsgrad in Ingolstadt
 
-SOURCE_TYPE: Zusammenstellung des Gesundheitsamts der Stadt Ingolstadt, Quelle: <a href="https://www.kvb.de/ueber-uns/versorgungsatlas">KVB-Versorgungsatlanten</a>  # data source  
+SOURCE_TYPE: Zusammenstellung des Gesundheitsamts der Stadt Ingolstadt, Quelle <a href="https://www.kvb.de/ueber-uns/versorgungsatlas">KVB-Versorgungsatlanten</a>  # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: jährlich
 
