--- a/meta/15-5.md
+++ b/meta/15-5.md
@@ -11,10 +11,12 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Hektar
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Waldflächen 
+   value: Abgänge 
+ - field: Waldflächen 
+   value: Zugänge
+ - field: Waldflächen 
+   value: Bilanz
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
@@ -22,7 +24,7 @@ computation_definitions: Ab- und Zugänge bewaldeter Flächen in Hektar
 
 SOURCE_TYPE: Amt für Ernährung, Landwirtschaft und Forsten Ingolstadt- Pfaffenhofen a. d. Ilm  # data source  
 source_earliest_available_1: 2015
-source_periodicity_1: 
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -31,7 +33,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen. Die Angaben beziehen sich auf die gesamte Region 10. Eine Bilanz nur für das Stadtgebiet Ingolstadt wird derzeit nicht erstellt.<br>
+Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen (ohne Kurzumtriebsplantagen / Christbaumkulturen) i.S.d. <a href="https://www.gesetze-bayern.de/Content/Document/BayWaldG">Bayerischen Waldgesetzes</a>. Die Angaben beziehen sich auf die gesamte Region 10.<br>
+<br>
+In Ingolstadt kamen bilanziell zwischen 2022 und 2023 kamen insgesamt knapp 5 ha Wald hinzu und ca. 1,1 ha Wald wurden gerodet.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.2: Unterstützung einer naturnahen Forstwirtschaft und Erhalt der Waldfläche<br>
