--- a/meta/3-14.md
+++ b/meta/3-14.md
@@ -57,7 +57,7 @@ Die Versorgungsgrade sollen zudem einen Überblick über drohende Unterversorgun
 <br>
 Unter 110 Prozent Versorgungsgrad liegen aktuell die Bereiche Hausärzte, HNO-Ärzte,, Kinder- und Jugendärzte in der hausärtzlichen und allgemeinen fachärztlichen Versorgung. In der Region 10 (Stadt Ingolstadt, Landkreis Eichstätt,
 Landkreis Neuburg-Schrobenhausen, Landkreis Pfaffenhofen) liegt der Versorgungsgrad von Kinder- und Jugendpschiater (spezialisierte fachärztliche Versorgung) bei 65,16. Hier droht eine Unterversorgung.<br>
-<br>Quelle: <a href="https://www.kvb.de/ueber-uns/versorgungsatlas">KVB-Versorgungsatlanten</a></b><br>
+<br><b>Quelle: <a href="https://www.kvb.de/ueber-uns/versorgungsatlas">KVB-Versorgungsatlanten</a></b><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur<br>
