--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Kurzzeit- und Langzeitpflegeplätze sowie ambulante Pflegeangebote
 
-SOURCE_TYPE: "<a href="https://www.pflegestuetzpunkt-ingolstadt.de/">Pflegestützpunkt Ingolstadt</a>, Gesundheitsamt Ingolstadt"  # data source  
+SOURCE_TYPE: <a href="https://www.pflegestuetzpunkt-ingolstadt.de/">Pflegestützpunkt Ingolstadt</a>, Gesundheitsamt Ingolstadt  # data source  
 source_earliest_available_1: 2021
 source_periodicity_1: jährlich
 
