--- a/meta/6-1.md
+++ b/meta/6-1.md
@@ -12,16 +12,18 @@ graph_type: bar  # chart types include: bar, line, binary
 computation_units: Anzahl sanitärer Einrichtungen 
 data_start_values:  # initialize the field to be shown  
  - field: sanitäre Einrichtungen 
-   value: barrierefrei
+   value: städtisch und barrierefrei
  - field: sanitäre Einrichtungen 
-   value: gesamt
+   value: städtisch gesamt
+ - field: sanitäre Einrichtungen 
+   value: barrierefrei gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl sanitärer Einrichtungen im öffentlichen Raum und Anteil der barrierefreien Einrichtungen
 
-SOURCE_TYPE: "Amt für Gebäudemanagement der Stadt Ingolstadt"   # data source  
-source_earliest_available_1: 2023
+SOURCE_TYPE: Amt für Gebäudemanagement der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt   # data source  
+source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
 language: de   
@@ -31,7 +33,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Stadtgebiet Ingolstadt werden insgesamt 23 öffentliche sanitäre Einrichtungen angeboten. 19 hiervon sind barrierefrei zugänglich. Die öffentliche Toilette im Alten Rathaus ist mit Einschränkung barrierefrei zugänglich.<br>
+Im Stadtgebiet Ingolstadt werden insgesamt 53 barrierefreie öffentliche Sanitäranlagen angeboten. Hierzu zählen auch öffentlich zugängliche sanitäre Einrichtungen von Kaufhäusern, Cafés oder anderen Einrichtungen, die sich nicht in städtischer Hand befinden. 23 sanitäre Einrichtungen werden von der Stadt Ingolstadt angeboten. 19 hiervon sind barrierefrei zugänglich. Die öffentliche Toilette im Alten Rathaus ist mit Einschränkung barrierefrei zugänglich.<br>
+<br>
+Eine Übersicht zu den barrierefreien öffentlichen Sanitäranlagen finden Sie in der Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt: <a href="https://www.ingolstadt.de/?object=tx,3052.74.1">Übersicht barrierefreie Sanitäranlagen</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus<br>
