--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -12,7 +12,9 @@ graph_type: line  # chart types include: bar, line, binary
 computation_units: Anzahl Barrierefreie und inklusive Mobilitätsangebot
 data_start_values:  # initialize the field to be shown  
  - field: Barrierefreie und inklusive Mobilitätsangebot
-   value: Barrierefreie Parkplätze 
+   value: städtische barrierefreie Parkplätze
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: gesamt barrierefreie Parkplätze    
  - field: Barrierefreie und inklusive Mobilitätsangebot
    value: Eltern-Kind-Parkplätze
  - field: Barrierefreie und inklusive Mobilitätsangebot
@@ -26,11 +28,11 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
+computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anzahl barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
 
-SOURCE_TYPE: IFG Aör, VGI, Tiefbauamt, Amt für Verkehrstechnik und Geoinformation  # data source  
-source_earliest_available_1:  2023
-source_periodicity_1: jährlich
+SOURCE_TYPE: IFG Aör, VGI, Tiefbauamt der Stadt Ingolstadt, Amt für Verkehrstechnik und Geoinformation der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt  # data source  
+source_earliest_available_1:  2019
+source_periodicity_1: unregelmäßig
 
 language: de   
 published: true 
@@ -39,13 +41,15 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator weist due Anzahl des barrierefreien und inklusiven Mobilitätsangebote aus (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind- und Behindertenparkplätze).<br>
+Der Indikator weist die Anzahl des barrierefreien und inklusiven Mobilitätsangebote aus (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind- und Behindertenparkplätze).<br>
 <br>
-Barrierefreie Parkplätze: Die Aussage bezieht sich auf Anlagen und Stellplätze in städtischer Hand bzw. in Hand der Beteiligungsunternehmen der Stadt Ingolstadt.<br>
+<b>Städtische barrierefreie Parkplätze:</b> Die Aussage bezieht sich auf Anlagen und Stellplätze in städtischer Hand bzw. in Hand der Beteiligungsunternehmen der Stadt Ingolstadt.<br>
 <br>
 In einigen, wenigen Parkeinrichtungen gab es früher Eltern-Kind-Stellplätze. Da es aber regelmäßig Diskussionen mit „Falschnutzern“ gab und eine rechtliche Durchsetzung nicht ist, wurden diese, in den Sanierungen, nicht mehr ausgewiesen.<br>
 <br>
 Aktuell existieren keine barrierefreien E-Ladestationen auf den Parkgeländen der IFG. Diese sind zwar breiter gebaut als normale Parkplätze, entsprechen aber nicht den Kriterien barrierefreier Stellplätze und fallen daher hier in der Statistik nicht darunter.<br> 
+<br>
+<b>Gesamt barrierefreie Parkplätze:</b> Diese Ausführung bezieht sich auf eine Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt. Hierbei sind auch nicht städtische Parkplätze enthalten. Die barrierefreien Parkplätze beim Audi Sportpark wurden hier dazugezählt (25 Parkplätze).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.3: Barrierefreie Mobilität für alle Menschen<br>
