--- a/meta/1-9.md
+++ b/meta/1-9.md
@@ -11,10 +11,12 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Wohngeldempfänger
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Art des Wohngeldes 
+   value: Mietzuschuss 
+ - field: Art des Wohngeldes 
+   value: Lastenzuschuss
+ - field: Art des Wohngeldes 
+   value: Gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
@@ -31,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Wohngeld ist ein staatlicher Zuschuss zur Miete (für Mieterinnen und Mieter) oder zur Belastung (für selbstnutzende Eigentümerinnen und Eigentümer).<br>
+Wohngeld ist ein staatlicher Zuschuss zur Miete (für Mieterinnen und Mieter = Mietzuschuss) oder zur Belastung (für selbstnutzende Eigentümerinnen und Eigentümer = Lastenzuschuss).<br>
 <br>
 Das Wohngeld hilft damit Bürger/-innen mit geringem Einkommen bei ihren Wohnkosten.<br>
 <br>
