--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -38,6 +38,6 @@ reporting_status: complete
 Der Indikator gibt die ambulante Versorgung mit Hausärzt/-innen, die an der kassenärztlichen Versorgung teilnehmen, in Form der Versorgungsdichte auf regionaler Ebene wieder. Hausärzt/-innen gehören zu den wohnortnah benötigten Arztgruppen, daher sind regionale Unterschiede in der ambulanten Versorgungsinfrastruktur von besonderem Interesse.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur<br>
 <br>
 <b>BNK-Indikator</b>
