--- a/meta/3-8.md
+++ b/meta/3-8.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Krankenhausbetten je 100.000 Einwohner/-innen
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=23111-001z&bypass=true&levelindex=1&levelid=1728309874842#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
