--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -37,6 +37,6 @@ reporting_status: complete
 Anzahl der Kinder in öff. Kindertageseinrichtungen mit / ohne Migrationshintergrund (zwischen 0 und unter 3 Jahre) in städtischer Trägerschaft. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
