--- a/meta/4-4.md
+++ b/meta/4-4.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der integrativen Kindertageseinrichtungen in Ingolstadt
 
-SOURCE_TYPE: "Amt für Kinderbetreuung und -Bildung"  # data source  
+SOURCE_TYPE: "Amt für Kinderbetreuung und -bildung"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -34,6 +34,6 @@ reporting_status: complete
 Der Indikator gibt die Anzahl der Einrichtungen an, die laut Betriebserlaubnis als integrative Einrichtung geführt werden. Es gibt eine große Anzahl an Kindertageseinrichtungen mit einer regulären Betriebserlaubnis, die Eingliederungshilfen / integrative Maßnahmen für die betreuten Kinder über den Bezirk Oberbayern anbieten und Inklusion möglich machen. Diese sind hier nicht aufgeführt.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>BNK-Indikator</b>
