--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -36,6 +36,6 @@ reporting_status: complete
 Der Indikator zeigt die Anzahl der Kinder in öff. Kindertageseinrichtungen insgesamt und mit / ohne  Migrationshintergrund (zwischen 3 und unter 6 Jahre) an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
