--- a/meta/4-6.md
+++ b/meta/4-6.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Der Anstellungsschlüssel setzt die regelmäßige wöchentliche Arbeitszeit des päd. Personals und die gewichteten Buchungszeiten der Kinder ins Verhältnis und entspricht den Empfehlungen des Bayerischen Staatsministeriums für Familie, Arbeit und Soziales (AVBayKiBiG §17 Anstellungsschlüssel).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
