--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -36,6 +36,6 @@ reporting_status: complete
 Prozentualer Anteil Schulabbrechenden ohne Hauptschulabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>BNK-Indikator</b>
