--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -9,16 +9,18 @@ indicator_sort_order: 04-08-01
 data_non_statistical: true  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: 
+computation_units: Anzahl Kitaplätze
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Kitaplätze 
+   value: 0-3 Jahre 
+ - field: Kitaplätze 
+   value: 3-6 Jahre
+ - field: Kitaplätze 
+   value: Gesamt 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl Kitaplätze in Ingolstadt (in städtischer und nicht-städtischer Trägerschaft)
 
 SOURCE_TYPE: Amt für Kinderbetreuung und -bildung  # data source  
 source_earliest_available_1: 2019
@@ -40,10 +42,6 @@ Bürgerhilfe Ingolstadt Kita GmbH: kinderEnergie<br>
 <br>
 Im Jahr 2022 wurden insgesamt 54 weitere Krippenplätze und 85 Kindergartenplätze geschaffen.<br>  
 <br>
-<b>Gesamtanzahl Kitaplätze, Stand Dezember 2022</b><br> 
-Regelförderung 0-3 Jahre: 1206 Kinder<br> 
-Regelförderung 3-6 Jahre: 4264 Kinder<br> 
-<br>
 Betreuungsquote, Stichtag 1.11.2022<br> 
 0-3 Jahre: 31,23% (1409 Kinder)<br> 
 3-6 Jahre: 96,82% (4.321 Kinder)<br>  
@@ -54,10 +52,6 @@ Städtische Kindertageseinrichtungen: Kita „Blumenviertel“ in Mailing und Na
 Katholische Kindertageseinrichtungen Ingolstadt gemeinnützige GmbH: Kita St. Rupert, weitere Kindergartengruppe<br> 
 <br>
 Im Jahr 2023 wurden insgesamt 12 weitere Krippenplätze und 70 Kindergartenplätze geschaffen.<br>  
-<br>
-<b>Gesamtanzahl Kitaplätze, Stand Dezember 2023</b><br> 
-Regelförderung 0-3 Jahre: 1256 Kinder<br> 
-Regelförderung 3-6 Jahre: 4211 Kinder<br> 
 <br>
 Betreuungsquote, Stichtag 1.11.2023<br>
 0-3 Jahre: 34,28% (1.496 Kinder)<br> 
