--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -60,6 +60,6 @@ Betreuungsquote, Stichtag 1.11.2023<br>
 Eine Übersicht zu allen Kindertageseinrichtungen finden Sie im <a href="https://stadtplan.ingolstadt.de/#ll=48.761277,11.388359&z=13&m=custom379&cat=20434,20438,20439,20440">Geoportal der Stadt Ingolstadt</a>. Mehr Informationen zur Kinderbetreuung finden Sie auf der Internetseite des <a href="https://www.ingolstadt.de/Leben/Kinder-Jugend-Familie/Kinderbetreuung/Kitas-der-Stadt-Ingolstadt/?La=1">Amts für Kinderbetreuung und -bildung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
