--- a/meta/6-1.md
+++ b/meta/6-1.md
@@ -38,6 +38,6 @@ Im Stadtgebiet Ingolstadt werden insgesamt 53 barrierefreie öffentliche Sanitä
 Eine Übersicht zu den barrierefreien öffentlichen Sanitäranlagen finden Sie in der Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt: <a href="https://www.ingolstadt.de/?object=tx,3052.74.1">Übersicht barrierefreie Sanitäranlagen</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N1.1: Transparenz und Wertschätzung der Qualität von Lebensmitteln erhöhen<br>
+N1.3: Förderung von barrierefreien Einrichtungen im öffentlichen Raum<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
