--- a/meta/8-7.md
+++ b/meta/8-7.md
@@ -34,7 +34,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Dieser Indikator zeigt die Summe der Auszubildenden am Standort Ingolstadt nach deutsch / nicht-deutsch an. Festzustellen ist ein stetiger Rückgang der Auszubildenen am Standort Ingolstadt. Gleichzeitig steigt die Zahl
-der Studierenden in Ingolstadt wie im Indikator <a href="https://sdg.nachhaltigkeitsagenda-ingolstadt.de/4-1/">"Studierendenanzahl und Anteil ausländischer Studierender"</a> zu sehen ist.<br>
+der Studierenden in Ingolstadt wie im Indikator <a href="https://sdg.nachhaltigkeitsagenda-ingolstadt.de/4-1/">Studierendenanzahl und Anteil ausländischer Studierender</a> zu sehen ist.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W1.1: Fachkräftegewinnung und -sicherung <br>
