--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -36,6 +36,6 @@ reporting_status: complete
 Dieser Indikator zeigt das Gründungssaldo in Ingolstadt nach Anzahl Gewerbean- und abmeldungen an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.1: Existenzgründungen<br>
+W3.1: Förderung von Existenzgründungen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
