--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -35,6 +35,6 @@ reporting_status: complete
 Mit der Initiative „Cityfreiraum“ verfolgen IFG, IN-City und Existenzgründerzentrum das Ziel, innerstädtische Leerstände mit individuellen Gründern aus den Bereichen Handel, Handwerk und Dienstleistung zu füllen. Damit soll eine höhere Angebotsvielfalt für Altstadtbesucher erzielt und Neugründungen gefördert werden. Die Förderung umfasst einen 12-monatigen Mietzuschuss i.H.v. 30% der Nettokaltmiete (max. 12.000 EUR), professionelle Beratung bei der Businessplanerstellung, einen einmaligen Werbekostenzuschuss i.H.v. 500,- EUR sowie eine kostenlose 1-jährige Mitgliedschaft bei IN-City e.V. (Quelle: <a href="https://www.ingolstadt-ifg.de/cityfreiraum">IFG Ingolstadt</a>).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.1: Existenzgründungen<br>
+W3.1: Förderung von Existenzgründungen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
