--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -40,7 +40,7 @@ Die im Stadtgebiet Ingolstadt mit 5G versorgte Fläche stieg im Jahresverlauf 20
 Ausprägungen“5 der 5G-Technologie. In dieser Zahl ist ein nicht näher spezifizierter Anteil an 5G SA Technologie enthalten, die mit zahlreichen Vorteilen für den Endverbraucher verbunden wird, u.a. Reduktion des Stromverbrauchs, größerer Nutzerkreis, Echtzeit-Datentransfer.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.2: Digitale Infrastruktur<br>
+W3.2: Ausbau der digitalen Infrastruktur<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
