--- a/meta/9-5.md
+++ b/meta/9-5.md
@@ -34,7 +34,7 @@ reporting_status: complete
 Dieser Indikator zeigt alle öffentlich zugänglichen Datzensätze an. Alle angegebenen öffentlich zugänglichen Datensätze sind von der Stadt Ingolstadt auf dem <a href="https://www.ingolstadt.de/Service/Weitere-Themen/Open-Data/">städtischen Open Data Portal</a> auffindbar.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.2: Digitale Infrastruktur<br>
+W3.2: Ausbau der digitalen Infrastruktur<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
